--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Create a binary assembler and a simulator for testing it
 
 CSE112 - Computer Organisation
 
-Parth Rastogi 2022352 (parthrastogicoder)
+Parth Rastogi 
 
 #Automation
 The final assembler is `assembler.py`
